[tool.poetry]
name = "oreilly_ml"
version = "0.1.0"
description = "Orielly env for ml"
authors = ["Lloyd Hamilton <lloydhamilton1991@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.1"
pandas = "^1.4.0"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.7.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
sagemaker = "^2.74.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
